ヘタレ絵のカテゴリ分け変更

--- a/picture.html
+++ b/picture.html
@@ -24,31 +24,32 @@
         <td><a href="picture/nozomi15.html"><img src="thumbnail/tn_nozomi15.jpg"></a></td>
         <td><a href="picture/norika06.html"><img src="thumbnail/tn_norika06.jpg"></a></td>
         <td><a href="picture/riko12.html"><img src="thumbnail/tn_riko12.jpg"></a></td>
-        <td><a href="picture/rc04.html"><img src="thumbnail/tn_rc04.jpg"></a></td>
-        <td><a href="picture/rc03.html"><img src="thumbnail/tn_rc03.jpg"></a></td>
-        <td><a href="picture/rc02.html"><img src="thumbnail/tn_rc02.jpg"></a></td>
-        <td><a href="picture/rc01.html"><img src="thumbnail/tn_rc01.jpg"></a></td>
         <td><a href="picture/nozomi14.html"><img src="thumbnail/tn_nozomi14.jpg"></a></td>
-      </tr>
-      <tr>
         <td><a href="picture/riko11.html"><img src="thumbnail/tn_riko11.jpg"></a></td>
         <td><a href="picture/norika05.html"><img src="thumbnail/tn_norika05.jpg"></a></td>
         <td><a href="picture/nozomi13.html"><img src="thumbnail/tn_nozomi13.jpg"></a></td>
         <td><a href="picture/nozomiriko03.html"><img src="thumbnail/tn_nozomiriko03.jpg"></a></td>
+      </tr>
+      <tr>
         <td><a href="picture/nozomiriko02.html"><img src="thumbnail/tn_nozomiriko02.jpg"></a></td>
+        <td><a href="picture/collabo15.html"><img src="thumbnail/tn_collabo15.jpg"></a></td>
+        <td><a href="picture/collabo14.html"><img src="thumbnail/tn_collabo14.jpg"></a></td>
         <td><a href="picture/nozomi12.html"><img src="thumbnail/tn_nozomi12.jpg"></a></td>
+        <td><a href="picture/collabo12.html"><img src="thumbnail/tn_collabo12.jpg"></a></td>
         <td><a href="picture/riko10.html"><img src="thumbnail/tn_riko10.jpg"></a></td>
         <td><a href="picture/nozomi11.html"><img src="thumbnail/tn_nozomi11.jpg"></a></td>
+        <td><a href="picture/riko09.html"><img src="thumbnail/tn_riko09.jpg"></a></td>
        </tr>
       <tr>
-        <td><a href="picture/riko09.html"><img src="thumbnail/tn_riko09.jpg"></a></td>
         <td><a href="picture/nozomi10.html"><img src="thumbnail/tn_nozomi10.jpg"></a></td>
         <td><a href="picture/nozomiriko01.html"><img src="thumbnail/tn_nozomiriko01.jpg"></a></td>
+        <td><a href="picture/collabo05.html"><img src="thumbnail/tn_collabo05.jpg"></a></td>
         <td><a href="picture/nozomi09.html"><img src="thumbnail/tn_nozomi09.jpg"></a></td>
         <td><a href="picture/norika04.html"><img src="thumbnail/tn_norika04.jpg"></a></td>
         <td><a href="picture/nozomi08.html"><img src="thumbnail/tn_nozomi08.jpg"></a></td>
         <td><a href="picture/riko08.html"><img src="thumbnail/tn_riko08.jpg"></a></td>
         <td><a href="picture/nozomi07.html"><img src="thumbnail/tn_nozomi07.jpg"></a></td>
+
       </tr>
       <tr>
         <td><a href="picture/riko07.html"><img src="thumbnail/tn_riko07.jpg"></a></td>
@@ -59,47 +60,62 @@
         <td><a href="picture/janedoe02.html"><img src="thumbnail/tn_janedoe02.jpg"></a></td>
         <td><a href="picture/norika03.html"><img src="thumbnail/tn_norika03.jpg"></a></td>
         <td><a href="picture/riko04.html"><img src="thumbnail/tn_riko04.jpg"></a></td>
+
       </tr>
       <tr>
         <td><a href="picture/nozomi04.html"><img src="thumbnail/tn_nozomi04.jpg"></a></td>
         <td><a href="picture/riko03.html"><img src="thumbnail/tn_riko03.jpg"></a></td>
         <td><a href="picture/nozomi03.html"><img src="thumbnail/tn_nozomi03.jpg"></a></td>
         <td><a href="picture/riko02.html"><img src="thumbnail/tn_riko02.jpg"></a></td>
+        <td><a href="picture/collabo02.html"><img src="thumbnail/tn_collabo02.jpg"></a></td>
         <td><a href="picture/norika02.html"><img src="thumbnail/tn_norika02.jpg"></a></td>
         <td><a href="picture/nozomi02.html"><img src="thumbnail/tn_nozomi02.jpg"></a></td>
         <td><a href="picture/riko01.html"><img src="thumbnail/tn_riko01.jpg"></a></td>
-        <td><a href="picture/nozomi01.html"><img src="thumbnail/tn_nozomi01.jpg"></a></td>
       </tr>
-      <tr>      
+      <tr>
+        <td><a href="picture/nozomi01.html"><img src="thumbnail/tn_nozomi01.jpg"></a></td>
         <td><a href="picture/norika01.html"><img src="thumbnail/tn_norika01.jpg"></a></td>
         <td><a href="picture/janedoe01.html"><img src="thumbnail/tn_janedoe01.jpg"></a></td>
       </tr>
-      
+
     </tbody>
   </table>
 
+
   <table class="picture">
-    <caption>いただきもの／コラボ</caption>
+    <caption>気分転換</caption>
     <tbody>
       <tr>
-        <td><a href="picture/fm16.html"><img src="thumbnail/tn_fm16.jpg"></a></td>
-        <td><a href="picture/fm15.html"><img src="thumbnail/tn_fm15.jpg"></a></td>
-        <td><a href="picture/fm14.html"><img src="thumbnail/tn_fm14.jpg"></a></td>
-        <td><a href="picture/fm13.html"><img src="thumbnail/tn_fm13.jpg"></a></td>
-        <td><a href="picture/fm12.html"><img src="thumbnail/tn_fm12.jpg"></a></td>
-        <td><a href="picture/fm11.html"><img src="thumbnail/tn_fm11.jpg"></a></td>
-        <td><a href="picture/fm10.html"><img src="thumbnail/tn_fm10.jpg"></a></td>
-        <td><a href="picture/fm09.html"><img src="thumbnail/tn_fm09.jpg"></a></td>
+        <td><a href="picture/rc06.html"><img src="thumbnail/tn_rc06.jpg"></a></td>
+        <td><a href="picture/rc05.html"><img src="thumbnail/tn_rc05.jpg"></a></td>
+        <td><a href="picture/rc04.html"><img src="thumbnail/tn_rc04.jpg"></a></td>
+        <td><a href="picture/rc03.html"><img src="thumbnail/tn_rc03.jpg"></a></td>
+        <td><a href="picture/rc02.html"><img src="thumbnail/tn_rc02.jpg"></a></td>
+        <td><a href="picture/rc01.html"><img src="thumbnail/tn_rc01.jpg"></a></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+
+
+  <table class="picture">
+    <caption>いただきもの</caption>
+    <tbody>
+      <tr>
+        <td><a href="picture/gift16.html"><img src="thumbnail/tn_gift16.jpg"></a></td>
+        <td><a href="picture/gift13.html"><img src="thumbnail/tn_gift13.jpg"></a></td>
+        <td><a href="picture/gift11.html"><img src="thumbnail/tn_gift11.jpg"></a></td>
+        <td><a href="picture/gift10.html"><img src="thumbnail/tn_gift10.jpg"></a></td>
+        <td><a href="picture/gift09.html"><img src="thumbnail/tn_gift09.jpg"></a></td>
+        <td><a href="picture/gift08.html"><img src="thumbnail/tn_gift08.jpg"></a></td>
+        <td><a href="picture/gift07.html"><img src="thumbnail/tn_gift07.jpg"></a></td>
+        <td><a href="picture/gift06.html"><img src="thumbnail/tn_gift06.jpg"></a></td>
       </tr>
       <tr>
-        <td><a href="picture/fm08.html"><img src="thumbnail/tn_fm08.jpg"></a></td>
-        <td><a href="picture/fm07.html"><img src="thumbnail/tn_fm07.jpg"></a></td>
-        <td><a href="picture/fm06.html"><img src="thumbnail/tn_fm06.jpg"></a></td>
-        <td><a href="picture/fm05.html"><img src="thumbnail/tn_fm05.jpg"></a></td>
-        <td><a href="picture/fm04.html"><img src="thumbnail/tn_fm04.jpg"></a></td>
-        <td><a href="picture/fm03.html"><img src="thumbnail/tn_fm03.jpg"></a></td>
-        <td><a href="picture/fm02.html"><img src="thumbnail/tn_fm02.jpg"></a></td>
-        <td><a href="picture/fm01.html"><img src="thumbnail/tn_fm01.jpg"></a></td>
+        <td><a href="picture/gift04.html"><img src="thumbnail/tn_gift04.jpg"></a></td>
+        <td><a href="picture/gift03.html"><img src="thumbnail/tn_gift03.jpg"></a></td>
+        <td><a href="picture/gift01.html"><img src="thumbnail/tn_gift01.jpg"></a></td>
       </tr>
     </tbody>
   </table>
