--- a/picture/collabo02.html
+++ b/picture/collabo02.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm13</title>
+  <title>collabo02</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,16 +14,15 @@
   </div>
   
   <div class="image">
-    <a href="fm13_.html"><img src="image/fm13.png" alt=""></a>
+    <img src="image/collabo02.jpg" alt="">
   </div>
-  
+
   <div class="picturetitle">
-    嫁と羽子板（かいたひと：<a href="http://www.pixiv.net/member.php?id=4658416" target="_blank">ﾊｺ[ﾟдﾟ]SDT</a> さん）
+    <a href="http://ncode.syosetu.com/n3095e/" target="_blank">フツキ嬢</a>と<a href="../hardproblem/">希海</a>
   </div>
   
   <div class="caption">
-    ハコさんから頂いた年賀状<br>
-    ミクさーん！　ミクミクミク！　アーッ!!　ああーっ!!
+    お礼絵。よその子様に変な服着せてしまった……
   </div>
 
   <div class="back">
