--- a/picture/collabo12.html
+++ b/picture/collabo12.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm12</title>
+  <title>collabo12</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <img src="image/fm12.png" alt="">
+    <img src="image/collabo12.png" alt="">
   </div>
   
   <div class="picturetitle">
@@ -22,7 +22,7 @@
   </div>
   
   <div class="caption">
-    <a href="fm08.html">ハコさんから頂いた絵</a>のお礼です！（<a href="http://www.pixiv.net/member_illust.php?illust_id=43925849&mode=medium" target="_blank">この子</a>のつもり）<br>
+    <a href="collabo08.html">ハコさんから頂いた絵</a>のお礼です！（<a href="http://www.pixiv.net/member_illust.php?illust_id=43925849&mode=medium" target="_blank">この子</a>のつもり）<br>
     下半身は塗り忘れではありません。
   </div>
 
