--- a/picture/collabo15.html
+++ b/picture/collabo15.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm02</title>
+  <title>collabo15</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,15 +14,17 @@
   </div>
   
   <div class="image">
-    <img src="image/fm02.jpg" alt="">
+    <img src="image/collabo15.png" alt="">
   </div>
-
+  
   <div class="picturetitle">
-    <a href="http://ncode.syosetu.com/n3095e/" target="_blank">フツキ嬢</a>と<a href="../hardproblem/">希海</a>
+    パスベルス（かいたひと：南正太郎）
   </div>
   
   <div class="caption">
-    お礼絵。よその子様に変な服着せてしまった……
+    <a href="collabo10.html">パスベルス氏から頂いた絵</a>のお礼です！<br>
+    四隅の記号はそれぞれ地水風火を表しているつもり。<br>
+    タロットカードの世界を参考にしました。
   </div>
 
   <div class="back">
