--- a/picture/gift04.html
+++ b/picture/gift04.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm11</title>
+  <title>gift04</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,16 +14,18 @@
   </div>
   
   <div class="image">
-    <img src="image/fm11.png" alt="">
+    <img src="image/gift04.png" alt="">
   </div>
   
   <div class="picturetitle">
-    アンドロイドは電気羊の（かいたひと：Jane Doe）
+    フィア(仮)（かいたひと：<a href="https://twitter.com/pasberth" target="_blank">パスベルス</a>さん）
   </div>
   
   <div class="caption">
-    いただいた年賀状絵。未年ってことで電気羊。<br>
-    よくよく見るとめっちゃ遊びが入ってるのでぜひ探してみてください
+    いつか描きたいファンタジーのキャラ。<br> 
+    ツイッターで設定語りしてたらなんと絵を描いていただきました。<br> 
+    しかもほぼ想像で描いたというのに、相当イメージに近いですコレ。<br> 
+    すごい！
   </div>
 
   <div class="back">
