--- a/picture/gift06.html
+++ b/picture/gift06.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm14</title>
+  <title>gift06</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,16 +14,16 @@
   </div>
   
   <div class="image">
-    <img src="image/fm14.png" alt="">
+    <img src="image/gift06.jpg" alt="">
   </div>
   
   <div class="picturetitle">
-    『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">交換日記とガラスの壁と夢</a>』より小林圭（かいたひと：南正太郎）
+    初音ミク（かいたひと：<a href="http://www.pixiv.net/member.php?id=4658416" target="_blank">ﾊｺ[ﾟдﾟ]SDT</a> さん）
   </div>
   
   <div class="caption">
-    <a href="fm09.html">ちょまどさんから頂いた絵</a>のお礼です！<br>
-    一万円相当の物品のお礼にチロルチョコ渡してしまった感。
+    去年の誕生日に嫁の絵を描いていただきました！<br> 
+    めっちゃかわいいです。<br>
   </div>
 
   <div class="back">
