--- a/picture/gift07.html
+++ b/picture/gift07.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm05</title>
+  <title>gift07</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,18 +14,16 @@
   </div>
   
   <div class="image">
-    <a href="fm05_.html"><img src="image/fm05.jpg" alt=""></a>
+    <img src="image/gift07.jpg" alt="">
   </div>
   
   <div class="picturetitle">
-    <a href="http://pasberth.github.io/gallery/pasberth1/index.html">パスベルス</a>（かいたひと：南正太郎）
+    初音ミク（かいたひと：<a href="http://www.pixiv.net/member.php?id=4658416" target="_blank">ﾊｺ[ﾟдﾟ]SDT</a> さん）
   </div>
   
   <div class="caption">
-    似せることを放棄した結果。<br> 
-    服はめんどくさかったので省略（すまぬ）。<br> 
-    人様のキャラ書くのって難しいですね……<br> 
-    クリックで差分見れます。<br> 
+    2014年9月にちょっと入院したんですけど、そのときにお見舞い絵をいただきました！<br> 
+    嫁は何を着させてもかわいい。<br>
   </div>
 
   <div class="back">
