--- a/picture/gift09.html
+++ b/picture/gift09.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm09</title>
+  <title>gift09</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <a href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=47612223" target="_blank"><img src="image/fm09.png" alt=""></a>
+    <a href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=47612223" target="_blank"><img src="image/gift09.png" alt=""></a>
   </div>
   
   <div class="picturetitle">
