--- a/picture/gift11.html
+++ b/picture/gift11.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm07</title>
+  <title>gift11</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,16 +14,16 @@
   </div>
   
   <div class="image">
-    <img src="image/fm07.jpg" alt="">
+    <img src="image/gift11.png" alt="">
   </div>
   
   <div class="picturetitle">
-    初音ミク（かいたひと：<a href="http://www.pixiv.net/member.php?id=4658416" target="_blank">ﾊｺ[ﾟдﾟ]SDT</a> さん）
+    アンドロイドは電気羊の（かいたひと：Jane Doe）
   </div>
   
   <div class="caption">
-    2014年9月にちょっと入院したんですけど、そのときにお見舞い絵をいただきました！<br> 
-    嫁は何を着させてもかわいい。<br>
+    いただいた年賀状絵。未年ってことで電気羊。<br>
+    よくよく見るとめっちゃ遊びが入ってるのでぜひ探してみてください
   </div>
 
   <div class="back">
