--- a/picture/gift13.html
+++ b/picture/gift13.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm08</title>
+  <title>gift13</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,16 +14,16 @@
   </div>
   
   <div class="image">
-    <img src="image/fm08.png" alt="">
+    <a href="gift13_.html"><img src="image/gift13.png" alt=""></a>
   </div>
   
   <div class="picturetitle">
-    <a href="../hardproblem/">希海とリコ</a>（かいたひと：<a href="http://www.pixiv.net/member.php?id=4658416" target="_blank">ﾊｺ[ﾟдﾟ]SDT</a> さん）
+    嫁と羽子板（かいたひと：<a href="http://www.pixiv.net/member.php?id=4658416" target="_blank">ﾊｺ[ﾟдﾟ]SDT</a> さん）
   </div>
   
   <div class="caption">
-    お世話になってるハコさんに描いてもらいました！！！<br>
-    希海の乳がすばらしいですね、乳が。
+    ハコさんから頂いた年賀状<br>
+    ミクさーん！　ミクミクミク！　アーッ!!　ああーっ!!
   </div>
 
   <div class="back">
