--- a/picture/rc05.html
+++ b/picture/rc05.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm04</title>
+  <title>rc04</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,18 +14,15 @@
   </div>
   
   <div class="image">
-    <img src="image/fm04.png" alt="">
+    <img src="image/rc05.png" alt="">
   </div>
   
   <div class="picturetitle">
-    フィア(仮)（かいたひと：<a href="https://twitter.com/pasberth" target="_blank">パスベルス</a>さん）
+    気分転換
   </div>
   
   <div class="caption">
-    いつか描きたいファンタジーのキャラ。<br> 
-    ツイッターで設定語りしてたらなんと絵を描いていただきました。<br> 
-    しかもほぼ想像で描いたというのに、相当イメージに近いですコレ。<br> 
-    すごい！
+    目つき悪くなりすぎた。
   </div>
 
   <div class="back">
