--- a/picture/rc06.html
+++ b/picture/rc06.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm06</title>
+  <title>rc04</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,16 +14,15 @@
   </div>
   
   <div class="image">
-    <img src="image/fm06.jpg" alt="">
+    <img src="image/rc06.png" alt="">
   </div>
   
   <div class="picturetitle">
-    初音ミク（かいたひと：<a href="http://www.pixiv.net/member.php?id=4658416" target="_blank">ﾊｺ[ﾟдﾟ]SDT</a> さん）
+    気分転換
   </div>
   
   <div class="caption">
-    去年の誕生日に嫁の絵を描いていただきました！<br> 
-    めっちゃかわいいです。<br>
+    服着せるのめんどくさかった。
   </div>
 
   <div class="back">
