--- a/picture/collabo05_.html
+++ b/picture/collabo05_.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm05_</title>
+  <title>collabo05_</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <a href="fm05.html"><img src="image/fm05_.png" alt=""></a>
+    <a href="collabo05.html"><img src="image/collabo05_.png" alt=""></a>
   </div>
   
   <div class="picturetitle">
