--- a/picture/collabo14.html
+++ b/picture/collabo14.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm03</title>
+  <title>collabo14</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,16 +14,16 @@
   </div>
   
   <div class="image">
-    <img src="image/fm03.jpg" alt="">
+    <img src="image/collabo14.png" alt="">
   </div>
   
   <div class="picturetitle">
-    ぷよぷよ風<a href="../hardproblem/">希海</a>（かいたひと：<a href="https://twitter.com/pasberth" target="_blank">パスベルス</a>さん）
+    『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">交換日記とガラスの壁と夢</a>』より小林圭（かいたひと：南正太郎）
   </div>
   
   <div class="caption">
-    髪のふんわり感とかやさぐれ感とかよく出てます！<br> 
-    かわいいしかっこいい！
+    <a href="collabo09.html">ちょまどさんから頂いた絵</a>のお礼です！<br>
+    一万円相当の物品のお礼にチロルチョコ渡してしまった感。
   </div>
 
   <div class="back">
