--- a/picture/gift03.html
+++ b/picture/gift03.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm15</title>
+  <title>gift03</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,17 +14,16 @@
   </div>
   
   <div class="image">
-    <img src="image/fm15.png" alt="">
+    <img src="image/gift03.jpg" alt="">
   </div>
   
   <div class="picturetitle">
-    パスベルス（かいたひと：南正太郎）
+    ぷよぷよ風<a href="../hardproblem/">希海</a>（かいたひと：<a href="https://twitter.com/pasberth" target="_blank">パスベルス</a>さん）
   </div>
   
   <div class="caption">
-    <a href="fm10.html">パスベルス氏から頂いた絵</a>のお礼です！<br>
-    四隅の記号はそれぞれ地水風火を表しているつもり。<br>
-    タロットカードの世界を参考にしました。
+    髪のふんわり感とかやさぐれ感とかよく出てます！<br> 
+    かわいいしかっこいい！
   </div>
 
   <div class="back">
