--- a/picture/gift13_.html
+++ b/picture/gift13_.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm13_</title>
+  <title>gift13_</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <a href="fm13.html"><img src="image/fm13_.png" alt=""></a>
+    <a href="gift13.html"><img src="image/gift13_.png" alt=""></a>
   </div>
   
   <div class="picturetitle">
