--- a/picture/gift16.html
+++ b/picture/gift16.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm16</title>
+  <title>gift16</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <a href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=49497872" target="_blank"><img src="image/fm16.jpg" alt=""></a>
+    <a href="http://www.pixiv.net/member_illust.php?mode=medium&illust_id=49497872" target="_blank"><img src="image/gift16.jpg" alt=""></a>
   </div>
   
   <div class="picturetitle">
