リンク間違ってたの修正

--- a/picture/collabo12.html
+++ b/picture/collabo12.html
@@ -22,7 +22,7 @@
   </div>
   
   <div class="caption">
-    <a href="collabo08.html">ハコさんから頂いた絵</a>のお礼です！（<a href="http://www.pixiv.net/member_illust.php?illust_id=43925849&mode=medium" target="_blank">この子</a>のつもり）<br>
+    <a href="gift08.html">ハコさんから頂いた絵</a>のお礼です！（<a href="http://www.pixiv.net/member_illust.php?illust_id=43925849&mode=medium" target="_blank">この子</a>のつもり）<br>
     下半身は塗り忘れではありません。
   </div>
 
