--- a/picture/collabo14.html
+++ b/picture/collabo14.html
@@ -22,7 +22,7 @@
   </div>
   
   <div class="caption">
-    <a href="collabo09.html">ちょまどさんから頂いた絵</a>のお礼です！<br>
+    <a href="gift09.html">ちょまどさんから頂いた絵</a>のお礼です！<br>
     一万円相当の物品のお礼にチロルチョコ渡してしまった感。
   </div>
 
