--- a/picture/collabo15.html
+++ b/picture/collabo15.html
@@ -22,7 +22,7 @@
   </div>
   
   <div class="caption">
-    <a href="collabo10.html">パスベルス氏から頂いた絵</a>のお礼です！<br>
+    <a href="gift10.html">パスベルス氏から頂いた絵</a>のお礼です！<br>
     四隅の記号はそれぞれ地水風火を表しているつもり。<br>
     タロットカードの世界を参考にしました。
   </div>
