気分転換追加

--- a/picture.html
+++ b/picture.html
@@ -86,13 +86,13 @@
     <caption>気分転換</caption>
     <tbody>
       <tr>
+        <td><a href="picture/rc07.html"><img src="thumbnail/tn_rc07.jpg"></a></td>
         <td><a href="picture/rc06.html"><img src="thumbnail/tn_rc06.jpg"></a></td>
         <td><a href="picture/rc05.html"><img src="thumbnail/tn_rc05.jpg"></a></td>
         <td><a href="picture/rc04.html"><img src="thumbnail/tn_rc04.jpg"></a></td>
         <td><a href="picture/rc03.html"><img src="thumbnail/tn_rc03.jpg"></a></td>
         <td><a href="picture/rc02.html"><img src="thumbnail/tn_rc02.jpg"></a></td>
         <td><a href="picture/rc01.html"><img src="thumbnail/tn_rc01.jpg"></a></td>
-        <td></td>
         <td></td>
       </tr>
     </tbody>
