--- a/picture.html
+++ b/picture.html
@@ -78,6 +78,7 @@
     <caption>気分転換</caption>
     <tbody>
       <tr>
+        <td><a href="picture/rc09.html"><img src="thumbnail/tn_rc09.jpg"></a></td>
         <td><a href="picture/rc08.html"><img src="thumbnail/tn_rc08.jpg"></a></td>
         <td><a href="picture/rc07.html"><img src="thumbnail/tn_rc07.jpg"></a></td>
         <td><a href="picture/rc06.html"><img src="thumbnail/tn_rc06.jpg"></a></td>
@@ -85,6 +86,8 @@
         <td><a href="picture/rc04.html"><img src="thumbnail/tn_rc04.jpg"></a></td>
         <td><a href="picture/rc03.html"><img src="thumbnail/tn_rc03.jpg"></a></td>
         <td><a href="picture/rc02.html"><img src="thumbnail/tn_rc02.jpg"></a></td>
+      </tr>
+      <tr>
         <td><a href="picture/rc01.html"><img src="thumbnail/tn_rc01.jpg"></a></td>
       </tr>
     </tbody>
