--- a/picture.html
+++ b/picture.html
@@ -21,6 +21,7 @@
     <caption>らくがき</caption>
     <tbody>
       <tr>
+        <td><a href="picture/metastable01.html"><img src="thumbnail/tn_metastable01.jpg"></a></td>
         <td><a href="picture/nozomi15.html"><img src="thumbnail/tn_nozomi15.jpg"></a></td>
         <td><a href="picture/norika06.html"><img src="thumbnail/tn_norika06.jpg"></a></td>
         <td><a href="picture/riko12.html"><img src="thumbnail/tn_riko12.jpg"></a></td>
@@ -28,30 +29,29 @@
         <td><a href="picture/riko11.html"><img src="thumbnail/tn_riko11.jpg"></a></td>
         <td><a href="picture/norika05.html"><img src="thumbnail/tn_norika05.jpg"></a></td>
         <td><a href="picture/nozomi13.html"><img src="thumbnail/tn_nozomi13.jpg"></a></td>
-        <td><a href="picture/nozomiriko03.html"><img src="thumbnail/tn_nozomiriko03.jpg"></a></td>
       </tr>
       <tr>
-        <td><a href="picture/nozomiriko02.html"><img src="thumbnail/tn_nozomiriko02.jpg"></a></td>
+        <td><a href="picture/hardproblem03.html"><img src="thumbnail/tn_hardproblem03.jpg"></a></td>
+        <td><a href="picture/hardproblem02.html"><img src="thumbnail/tn_hardproblem02.jpg"></a></td>
         <td><a href="picture/collabo15.html"><img src="thumbnail/tn_collabo15.jpg"></a></td>
         <td><a href="picture/collabo14.html"><img src="thumbnail/tn_collabo14.jpg"></a></td>
         <td><a href="picture/nozomi12.html"><img src="thumbnail/tn_nozomi12.jpg"></a></td>
         <td><a href="picture/collabo12.html"><img src="thumbnail/tn_collabo12.jpg"></a></td>
         <td><a href="picture/riko10.html"><img src="thumbnail/tn_riko10.jpg"></a></td>
         <td><a href="picture/nozomi11.html"><img src="thumbnail/tn_nozomi11.jpg"></a></td>
-        <td><a href="picture/riko09.html"><img src="thumbnail/tn_riko09.jpg"></a></td>
        </tr>
       <tr>
+        <td><a href="picture/riko09.html"><img src="thumbnail/tn_riko09.jpg"></a></td>
         <td><a href="picture/nozomi10.html"><img src="thumbnail/tn_nozomi10.jpg"></a></td>
-        <td><a href="picture/nozomiriko01.html"><img src="thumbnail/tn_nozomiriko01.jpg"></a></td>
+        <td><a href="picture/hardproblem01.html"><img src="thumbnail/tn_hardproblem01.jpg"></a></td>
         <td><a href="picture/collabo05.html"><img src="thumbnail/tn_collabo05.jpg"></a></td>
         <td><a href="picture/norika04.html"><img src="thumbnail/tn_norika04.jpg"></a></td>
         <td><a href="picture/nozomi08.html"><img src="thumbnail/tn_nozomi08.jpg"></a></td>
         <td><a href="picture/riko08.html"><img src="thumbnail/tn_riko08.jpg"></a></td>
         <td><a href="picture/nozomi07.html"><img src="thumbnail/tn_nozomi07.jpg"></a></td>
-        <td><a href="picture/riko07.html"><img src="thumbnail/tn_riko07.jpg"></a></td>
       </tr>
       <tr>
-
+        <td><a href="picture/riko07.html"><img src="thumbnail/tn_riko07.jpg"></a></td>
         <td><a href="picture/nozomi06.html"><img src="thumbnail/tn_nozomi06.jpg"></a></td>
         <td><a href="picture/riko06.html"><img src="thumbnail/tn_riko06.jpg"></a></td>
         <td><a href="picture/riko05.html"><img src="thumbnail/tn_riko05.jpg"></a></td>
@@ -59,9 +59,9 @@
         <td><a href="picture/norika03.html"><img src="thumbnail/tn_norika03.jpg"></a></td>
         <td><a href="picture/nozomi03.html"><img src="thumbnail/tn_nozomi03.jpg"></a></td>
         <td><a href="picture/riko02.html"><img src="thumbnail/tn_riko02.jpg"></a></td>
-        <td><a href="picture/collabo02.html"><img src="thumbnail/tn_collabo02.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/collabo02.html"><img src="thumbnail/tn_collabo02.jpg"></a></td>
         <td><a href="picture/norika02.html"><img src="thumbnail/tn_norika02.jpg"></a></td>
         <td><a href="picture/nozomi02.html"><img src="thumbnail/tn_nozomi02.jpg"></a></td>
         <td><a href="picture/riko01.html"><img src="thumbnail/tn_riko01.jpg"></a></td>
