ファイル名変更

--- a/picture/hardproblem02.html
+++ b/picture/hardproblem02.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>nozomiriko02</title>
+  <title>hardproblem02</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <img src="image/nozomiriko02.png" alt="">
+    <img src="image/hardproblem02.png" alt="">
   </div>
   
   <div class="picturetitle">
