--- a/picture/hardproblem01.html
+++ b/picture/hardproblem01.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>nozomiriko01</title>
+  <title>hardproblem01</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,7 +14,7 @@
   </div>
   
   <div class="image">
-    <img src="image/nozomiriko01.png" alt="">
+    <img src="image/hardproblem01.png" alt="">
   </div>
   
   <div class="picturetitle">
