--- a/picture.html
+++ b/picture.html
@@ -75,19 +75,21 @@
 
 
   <table class="picture">
-    <caption>気分転換</caption>
+    <caption>気分転換シリーズ</caption>
     <tbody>
       <tr>
+        <td><a href="picture/rc15.html"><img src="thumbnail/tn_rc15.jpg"></a></td>
+        <td><a href="picture/rc14.html"><img src="thumbnail/tn_rc14.jpg"></a></td>
         <td><a href="picture/rc09.html"><img src="thumbnail/tn_rc09.jpg"></a></td>
         <td><a href="picture/rc08.html"><img src="thumbnail/tn_rc08.jpg"></a></td>
         <td><a href="picture/rc07.html"><img src="thumbnail/tn_rc07.jpg"></a></td>
         <td><a href="picture/rc06.html"><img src="thumbnail/tn_rc06.jpg"></a></td>
         <td><a href="picture/rc05.html"><img src="thumbnail/tn_rc05.jpg"></a></td>
         <td><a href="picture/rc04.html"><img src="thumbnail/tn_rc04.jpg"></a></td>
-        <td><a href="picture/rc03.html"><img src="thumbnail/tn_rc03.jpg"></a></td>
-        <td><a href="picture/rc02.html"><img src="thumbnail/tn_rc02.jpg"></a></td>
       </tr>
       <tr>
+        <td><a href="picture/rc03.html"><img src="thumbnail/tn_rc03.jpg"></a></td>
+        <td><a href="picture/rc02.html"><img src="thumbnail/tn_rc02.jpg"></a></td>
         <td><a href="picture/rc01.html"><img src="thumbnail/tn_rc01.jpg"></a></td>
       </tr>
     </tbody>
