イベントページ更新

--- a/event.html
+++ b/event.html
@@ -16,16 +16,42 @@
   <div class="event_text">
     イベントの参加履歴／参加予定
   </div>
-  <div class="event_list">
-2014/12/29　<span class="event">コミックマーケット87</span>（2日目）<br>
-東ソ-08a　RedTailCat<br>
-『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">暗黒定数式 Vol.1</a>』委託販売
-  </div>
-  <div class="event_list">
-2014/11/24　<span class="event">第十九回文学フリマ</span><br>
-Fホール(2F) イ-67　<a href="http://dark-constexpr.github.io/" target="_blank">暗黒定数式</a><br>
-『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">暗黒定数式 Vol.1</a>』に「ふたりのハードプロブレム」§1～3を寄稿
-  </div>
+
+
+  <table class="event">
+    <tbody>
+
+      <tr>
+        <td rowspan="2" class="eventdate">2015/11/23</td>
+    　　　　<td class="eventtitle"><span class="event">第二十一回文学フリマ東京</span></td>
+      </tr>
+      <tr>
+      	<td class="eventcaption">『<a href="http://dark-constexpr.github.io/publications/vol2.html" target="_blank">暗黒定数式 Vol.2</a>』に「ふたりのハードプロブレム」§4～6を寄稿予定</td></tr>
+
+      <tr>
+        <td rowspan="2" class="eventdate">2015/09/20</td>
+    　　　　<td class="eventtitle"><span class="event">第三回文学フリマ大阪</span>（応募中）</td>
+      </tr>
+      <tr>
+      	<td class="eventcaption">『ふたりのハードプロブレム』文庫版とその合同誌を販売予定</td></tr>
+
+      <tr>
+        <td rowspan="2" class="eventdate">2014/12/29</td>
+    　　　　<td class="eventtitle"><span class="event">コミックマーケット87</span>（2日目）　東ソ-08a　RedTailCat</td>
+      </tr>
+      <tr>
+      	<td class="eventcaption">『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">暗黒定数式 Vol.1</a>』委託販売</td></tr>
+
+      <tr>
+        <td rowspan="2" class="eventdate">2014/11/24</td>
+    　　　　<td class="eventtitle"><span class="event">第十九回文学フリマ東京</span>　Fホール(2F) イ-67　<a href="http://dark-constexpr.github.io/" target="_blank">暗黒定数式</a></td>
+      </tr>
+      <tr>
+      	<td class="eventcaption">『<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">暗黒定数式 Vol.1</a>』に「ふたりのハードプロブレム」§1～3を寄稿</td></tr>
+
+    </tbody>
+  </table>
+
 
   <div class="back">
     <a href="../">戻る</a>
