ヘタレ絵追加

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </tbody>
   </table>
 
-  <div class="information">
+  <div class="information" style="display:none;">
     暗黒定数式Vol.1の通販が始まりました！<br>
     <div style="font-size:small;">書籍版 <a href="https://dark-constexpr.booth.pm/items/61500" target="_blank">https://dark-constexpr.booth.pm/items/61500</a><br>
          pdf版 <a href="https://dark-constexpr.booth.pm/items/65524" target="_blank">https://dark-constexpr.booth.pm/items/65524</a>
