大阪文フリ当選

--- a/index.html
+++ b/index.html
@@ -41,13 +41,11 @@
     </tbody>
   </table>
 
-  <div class="information" style="display:none;">
-    暗黒定数式Vol.1の通販が始まりました！<br>
-    <div style="font-size:small;">書籍版 <a href="https://dark-constexpr.booth.pm/items/61500" target="_blank">https://dark-constexpr.booth.pm/items/61500</a><br>
-         pdf版 <a href="https://dark-constexpr.booth.pm/items/65524" target="_blank">https://dark-constexpr.booth.pm/items/65524</a>
-    </div>
-    また、書籍版購入者には<a href="http://dark-constexpr.github.io/publications/vol1.html" target="_blank">無料でpdf版が配布されるとのこと</a>なので<br>
-    こちらもご興味がある方はぜひに。
+  <div class="information" style="display:;">
+    <div style="font-weight:bold;"><a href="http://bunfree.net/?osaka_bun03" target="_blank">第三回大阪文フリ</a>への参加が決まりました。</div>
+    『<a href="hardproblem/">ふたりのハードプロブレム</a>』書籍版とその合同誌を販売します。<br>
+    書籍版は絵を<a href="http://www.pixiv.net/member.php?id=10662" target="_blank">れーちぇさん</a>に描いていただくことになりました！<br>
+    お楽しみに。
   </div>
   
 </body>
