--- a/event.html
+++ b/event.html
@@ -30,7 +30,7 @@
 
       <tr>
         <td rowspan="2" class="eventdate">2015/09/20</td>
-    　　　　<td class="eventtitle"><span class="event">第三回文学フリマ大阪</span>（応募中）</td>
+    　　　　<td class="eventtitle"><span class="event">第三回文学フリマ大阪</span></td>
       </tr>
       <tr>
       	<td class="eventcaption">『ふたりのハードプロブレム』文庫版とその合同誌を販売予定</td></tr>
