福岡文フリ追加

--- a/event.html
+++ b/event.html
@@ -29,6 +29,13 @@
       	<td class="eventcaption">『<a href="http://dark-constexpr.github.io/publications/vol2.html" target="_blank">暗黒定数式 Vol.2</a>』に「ふたりのハードプロブレム」§4～6を寄稿予定</td></tr>
 
       <tr>
+        <td rowspan="2" class="eventdate">2015/10/25</td>
+    　　　　<td class="eventtitle"><span class="event">第一回文学フリマ福岡</span></td>
+      </tr>
+      <tr>
+      	<td class="eventcaption">『ふたりのハードプロブレム』文庫版を販売予定</td></tr>
+
+      <tr>
         <td rowspan="2" class="eventdate">2015/09/20</td>
     　　　　<td class="eventtitle"><span class="event">第三回文学フリマ大阪</span></td>
       </tr>
