表現の一部訂正

--- a/hardproblem/4-03.html
+++ b/hardproblem/4-03.html
@@ -111,9 +111,8 @@
 　こぼれた言葉は、正直なものだったと思う。自分本位にここまでやって来たけれど、リコからすれば賑やかな地区センターでもっと時間を潰したかっただろうことは想像に難くない。
 「いえ……私こそ。ありがとうございます。わがままに付き合ってもらって……。えっと、その……」
 　そしてまた沈黙。リコは少しだけ言いにくそうに下を向き、首からぶら下がった赤いマフラーを手に取ると
-「私……ずっと気付いてたんです。希海さんが恥ずかしそうにしてたこと」
+「さっきも言いましたけど、私……ずっと気付いてたんです。希海さんが恥ずかしそうにしてたこと」
 「…………え？」
-　あまりにも唐突な告白。
 「でも『恥ずかしいなら外しましょうか』っていうその一言が、どうしても言えなかったんです。おかしいですよね。たった一言、ほんの少し声を出すっていうそれだけのことなのに」
 　そしてリコはくすりと笑った。
 「多分、楽しかったんです。楽しかったから、その一言が言えなかったんだと思います。だって私、今までに誰かとこういうことした経験がないから……」
