明月さんのサイトをリンクに追加

--- a/link.html
+++ b/link.html
@@ -102,9 +102,10 @@
       <tr>
 　　　　　　　<td class="nobanner"><a href="http://chomado.com/" target="_blank"><span class="pbanner">@chomado ちょまど帳</span></a></td>
 　　　　　　　<td class="nobanner"><a href="https://hayate2255.wordpress.com/" target="_blank"><span class="pbanner">小さいモノは美しい</span></a></td>
-　　　　　　　<td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
+        <td class="nobanner"><a href="http://qiita.com/marionette-of-u" target="_blank"><span class="pbanner">marionette-of-u</span></a></td>
       </tr>
       <tr>
+　　　　　　　<td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
         <td class="banner"><a href="http://www.htmq.com/index.htm" target="_blank"><img src="banner/logo.gif"></a></td>
       </tr>
     </tbody>
