謝辞を編集

--- a/hardproblem/acknowledgements.html
+++ b/hardproblem/acknowledgements.html
@@ -14,8 +14,8 @@
 
   <div class="contents">
 <div class="text">
-　『ふたりのハードプロブレム』は絵も文章も自分一人で作り上げたものではあるのですが、ここに至るまでには沢山の人の支え――とりわけ面白いと言ってくれた方々の存在が不可欠でした。
-　最初の読者であるばかりか合同誌にまで誘ってくれた村上氏、二番目に読んでくれてステキな公式サイトまで作ってくれたパスベルス氏、三番目に読んでくれて「希海が好きだ」と言ってくれたフジミさん、わざわざキャラクターや設定のまとめを作りながら熱心に読み込んでくれたMさん。詳細に感想述べてくれたイカ氏、こっそりと読んでくれて文フリで会ったときに「面白かった」と言ってくれたzakさんとめるぽん夫妻。「終盤が今までで読んだネット小説で一番だった」とまで言ってくれたハルさん。ド下手な絵の指導をしてくれたN先生。ステキな絵を描いてくれたれーちぇさん。
+　『ふたりのハードプロブレム』の制作には約二年ほどの年月が掛かっておりますが、ここに至るまでには沢山の人の支え――とりわけ面白いと言ってくれた方々の存在が不可欠でした。
+　最初の読者であるばかりか合同誌にまで誘ってくれた村上氏、二番目に読んでくれてステキな公式サイトまで作ってくれたパスベルス氏、三番目に読んでくれて「希海が好きだ」と言ってくれたフジミさん、わざわざキャラクターや設定のまとめを作りながら熱心に読み込んでくれたMさん。詳細に感想述べてくれたイカ氏、こっそりと読んでくれて文フリで会ったときに「面白かった」と言ってくれたzakさんとめるぽん夫妻。「終盤が今までで読んだネット小説で一番だった」とまで言ってくれたハルさん。ステキな絵を描いてくれたれーちぇさん。
 　みんなが居なかったら、自分はとっくの昔にフェードアウトして今ごろ無力感に打ちひしがれていたことでしょう。感謝しようと思ってもしきれません。あなたたち一人ひとりが自分にとってのリコです。
 </div>
 
