表現の細かい修正

--- a/hardproblem/4-02.html
+++ b/hardproblem/4-02.html
@@ -35,7 +35,7 @@
 「そうだ。じゃあ今から買いに行きませんか？」
 「へ？　だってリコ、今さっき買い物から帰ったばっかりじゃない」
 「私は大丈夫ですよ。それに、今日は地区センターでイルミネーションやってるらしいんでついでに見に行きましょうよ。こんな日に部屋にこもってたら勿体ないです。だって……」
-　リコはそこまで言うと両手にぶら下げた買い物袋を床に置き、
+　リコはそこまで言うと片手にぶら下げた買い物袋を床に置き、
 「だって、せっかくのクリスマスイブなんですから」
 　張り切れんばかりの笑顔でそう言うのであった。
 　希海は頭を抱えた。せっかく人が忘れようとしていたのに、思い出させやがって。
@@ -84,7 +84,7 @@
 「はいっ。気に入ってもらえたらいいんですけどね」
 　ちょうど愛用していたマフラーが古くなっていた頃だ。そういえばいつだったか、リコの前で新しいのが欲しいと言った記憶がある。気の利いたチョイスに思わず笑みがこぼれた。可愛らしい赤のダイヤ柄が自分に似合うかどうか心配だが、そんなのは些細なことである。誰かが自分のために選んでくれたという、その事実だけで十分に嬉しいのだから。
 「あ、ありがとっ！　じゃあ早速巻いて行――」
-　希海は天にも登る気持ちで袋からマフラーを取り出し、
+　そして希海は天にも登る気持ちで袋からマフラーを取り出し、
 「ってリコこれ」
 　固まった。
 　袋から取り出したマフラーが、希海の背丈の三倍はあろうかという長さのものだったのである。どおりでやけにボリュームがあるわけだ。
@@ -92,7 +92,7 @@
 　子供のようなリコの笑顔に嫌な汗が背中を伝った。だが巻いて行くと言った手前もはや後戻りもできず、結果としてこんなこっ恥ずかしい上に色々と勘違いされかねないマフラーを巻いてカップルの跋扈する繁華街を歩く今に至るのである。
 
 「希海さん、さっきからどうしたんですか？　あっち見たりこっち見たり」
-　相変わらずそこら中に睨みを効かせていた希海にリコが不思議そうな声を上げた。あまりにもあまりにも、きょとんとした表情。ひょっとしてこいつは自分の置かれてる状況が理解できていないのだろうか。いや、楽しそうにはしゃぐリコの様子からするとそれはないだろう。この子はこの小道具の意味するところを理解していない。あまりに自明なことだ。というか、その辺を分かっていながらこんなマフラーを贈ったのだとしたら本格的に嫌がらせである。
+　相変わらずそこら中に睨みを効かせていた希海にリコが不思議そうな声を上げた。あまりにもあまりにも、きょとんとした表情。ひょっとしてこいつは自分の置かれてる状況が理解できていないのだろうか。いや、楽しそうにはしゃぐリコの様子からしてそれは確実だ。この子はこの小道具の意味するところを理解していない。あまりに自明なことだ。というか、その辺を分かっていながらこんなマフラーを贈ったのだとしたら本格的に嫌がらせである。
 　物を知らないリコの無邪気さに希海は今までにも何度か頭を悩まされてきた。だが、考えようによってはこれはチャンスにもなる。せっかくリコの方から話題を振ってきてくれたのだ。ここはいっそ全てを説明し、その上でこのマフラーを外すことはできないだろうか。
 「いや、ちょっと気になってて。ほら、このマフラー」
 　希海はそう言って、自らとリコを繋ぐ毛糸の束をそっと手に載せる。うむ。話の切り出し方はまずまずだ。リコの目線がこちらへと向かったことを確認した希海は、その注意が逸れない内に滑らかに本題へと移行する。
@@ -111,9 +111,9 @@
 「……って希海さん、聞いてます？」
 「あ。ああ、うん。聞いてる聞いてる！」
 　リコの呼びかけに頭をぶんぶんと縦に振って答える。もうこうなったらどこまでもこの小っ恥ずかしいマフラーを着けて街を練り歩かないといけないのだろうか。いや、多分そうなのだろう。今が覚悟の決め時だ。なに、こういうのは気持ちの持ちよう一つで何とでもなる。どうせすれ違う者のほとんどは見ず知らずの人間だ。この後、一生話すこともない人間にどう思われようが、実生活上には全く影響を及ぼさないではないか。
-　それに希海自身の疑心暗鬼というものも大きく影響しているだろう。自分が気にしているから、ありもしない周囲の目線を感じ取ってしまっている可能性だってある。聞いたところによると、つい三十年ほど昔は若い女性同士がベタベタと触れ合ったり、手を繋いで歩いたりすることは珍しくなかったと聞くし、満州あたりの寂れた都市に行けばそういう光景も未だに見られるのだとか。ならば今の希海とリコの姿もさほど不自然なものではないのかも知れない。たかが三十年である。当時を知る人もまだ沢山いるだろう。そんなちょっと昔の慣習を今ここで再現してみたところで、そこまで奇異に受け止められることはないはずである。
+　それに希海自身の疑心暗鬼というものも大きく影響しているだろう。自分が気にしているから、ありもしない周囲の目線を感じ取ってしまっている可能性だってある。聞いたところによると、つい三十年ほど昔は若い女性同士がベタベタと触れ合ったり手を繋いで歩いたりすることは珍しくなかったと聞くし、満州あたりの寂れた都市に行けばそういう光景も未だに見られるのだとか。ならば今の希海とリコの姿もさほど不自然なものではないのかも知れない。たかが三十年である。当時を知る人もまだ沢山いるだろう。そんなちょっと昔の慣習を今ここで再現してみたところで、そこまで奇異に受け止められることはないはずである。
 （……よし！）
-　そんな風に自己暗示をかけていた希海の背後を、一組のカップルが仲睦まじく手を繋ぎながら通りすぎていく。年の頃はちょうど希海と同じくらい。地味ながらもセンスの良いダッフルコートをきたメガネの男と、大人びたストールをまとったセミロングの女。それまでは楽しそうに会話をしていたというのに、希海たちの傍を通り過ぎるほんの一瞬、二人の会話が止まった。
+　そんな風に自己暗示をかけていた希海の背後を、一組のカップルが仲睦まじく手を繋ぎながら通りすぎていく。年の頃はちょうど希海と同じくらい。地味ながらもセンスの良いピーコートをきたメガネの男と、大人びたストールをまとったセミロングの女。それまでは楽しそうに会話をしていたというのに、希海たちの傍を通り過ぎるほんの一瞬、二人の会話が止まった。
 　希海の頬筋がひくつく。気のせいだ疑心暗鬼だ。私達に何ら不自然なところはない。自らに言い聞かせるが、すれ違いの直後、背後から
 「ねえ……。アレって」
 「バカ、聞こえるだろ……！」
